# modal-nyc-hackathon

./: .gitignore  app.py  ast-parser.py  ast-work.md  ast_util.py  backend_modal.py  chunk_contents.txt  debug_documents.txt  diagram.py  documents.json  graph_parser.py  indexer.py  kenny-ast-parser.py  llama.py  local.py  model.py  output  output.dot  pyproject.toml  results.md  retrieval_tool.py  test.ipynb
