[tool.poetry]
name = "modal-nyc-hackathon"
version = "0.1.0"
description = ""
authors = ["Colin Fortuner <cfortuner@gmail.com>"]
readme = "README.md"
packages = [{include = "modal_nyc_hackathon"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.9"
astroid = "^2.15.6"
tree-sitter = "^0.20.1"
llama-index = "^0.8.10"
tree-sitter-languages = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
