[tool.poetry]
name = "modal-nyc-hackathon"
version = "0.1.0"
description = ""
authors = ["Colin Fortuner <cfortuner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.9"
astroid = "^2.15.6"
tree-sitter = "^0.20.1"
llama-index = "^0.8.10"
tree-sitter-languages = "^1.7.0"
graphviz = "^0.20.1"
radon = "^6.0.1"
python-dotenv = "^1.0.0"
streamlit = "^1.26.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
