[tool.poetry]
name = "modal-nyc-hackathon"
version = "0.1.0"
description = ""
authors = ["Colin Fortuner <cfortuner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
openai = "^0.27.9"
astroid = "^2.15.6"
tree-sitter = "^0.20.1"
llama-index = "^0.8.10"
tree-sitter-languages = "^1.7.0"

graphviz = "^0.20.1"
radon = "^6.0.1"
python-dotenv = "^1.0.0"
matplotlib = "^3.7.2"
networkx = "^3.1"
plotly = "^5.16.1"
scipy = "^1.11.2"
sklearn = "^0.0.post7"
scikit-learn = "^1.3.0"
streamlit = "^1.26.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
